<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@mipmap/ic_home"
        android:title="@string/bottom_nav_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_preference"
        android:enabled="true"
        android:icon="@mipmap/ic_preference"
        android:title="@string/bottom_nav_preferences"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@mipmap/ic_profile"
        android:title="@string/bottom_nav_profile"
        app:showAsAction="ifRoom" />
</menu>