<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_dimen"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:titleTextStyle="@style/MyActionBar"
            app:layout_scrollFlags="scroll|enterAlways" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/user_name_text_view"
                style="@style/UserProfileStyle"
                android:layout_width="0dp"
                android:layout_weight="9"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                tools:text="Madhu Patel"/>
            <Button
                android:id="@+id/save_user_name_btn"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/save_user_name_btn"/>
        </LinearLayout>


        <TextView
            android:id="@+id/favourite_list_text_view"
            android:visibility="gone"
            style="@style/UserProfileStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favourites_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/setting_text_view"
                style="@style/UserProfileStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:text="@string/settings_text" />

            <ImageView
                android:id="@+id/settings_dropdown_image_view"
                android:visibility="visible"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/ic_down_arrow" />

        </LinearLayout>

        <TextView
            style="@style/UserProfileStyle"
            android:id="@+id/media_quality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/media_quality"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/wifi_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <TextView
                android:id="@+id/wifi_media_quality_text_view"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                style="@style/UserProfileStyle"
                android:text="@string/wifi_quality_text"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/wifi_media_quality_spinner"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"></androidx.appcompat.widget.AppCompatSpinner>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mobile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <TextView
                android:id="@+id/mobile_data_media_quality_text_view"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                style="@style/UserProfileStyle"
                android:text="@string/mobile_data_quality_text"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/mobile_data_media_quality_spinner"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"></androidx.appcompat.widget.AppCompatSpinner>

        </LinearLayout>

        <TextView
            android:id="@+id/help_text_view"
            style="@style/UserProfileStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_text" />

        <TextView
            android:id="@+id/about_us_text_view"
            style="@style/UserProfileStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_text" />
    </LinearLayout>

</LinearLayout>
